--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-image-lightbox": "^5.0.0",
     "react-md": "^1.2.8",
     "react-scripts": "1.0.14",
+    "react-scrollable-anchor": "^0.6.1",
     "react-select": "^1.0.0-rc.10",
     "react-strap": "^0.0.1",
     "react-table": "^6.5.3",
