--- a/package.json
+++ b/package.json
@@ -4,18 +4,28 @@
   "private": true,
   "homepage": "/",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "availity-reactstrap-validation": "^1.4.3",
     "bootstrap": "4.0.0-alpha.6",
+    "font-awesome": "^4.7.0",
     "fuzzy": "^0.1.3",
     "lodash.debounce": "^4.0.8",
     "match-sorter": "^1.8.1",
     "react": "^15.3.0",
+    "react-art": "~16.0.0",
     "react-bootstrap-table": "^4.0.6",
     "react-bs-table": "^2.3.7",
     "react-datepicker": "^1.0.0",
     "react-dom": "^15.3.1",
+    "react-icons": "^3.1.0",
     "react-image-lightbox": "^5.0.0",
     "react-md": "^1.2.8",
+    "react-native": "^0.57.1",
+    "react-native-hr": "^1.1.4",
+    "react-native-hr-component": "^1.0.6",
+    "react-native-hr-plus": "^1.0.6",
     "react-scripts": "1.0.14",
     "react-scrollable-anchor": "^0.6.1",
     "react-select": "^1.0.0-rc.10",
