--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "availity-reactstrap-validation": "^1.4.3",
     "bootstrap": "4.0.0-alpha.6",
+    "file-system": "^2.2.2",
     "font-awesome": "^4.7.0",
     "fuzzy": "^0.1.3",
+    "glob": "^7.1.3",
+    "list-react-files": "^0.2.0",
     "lodash.debounce": "^4.0.8",
     "match-sorter": "^1.8.1",
+    "node-dir": "^0.1.17",
     "react": "^15.3.0",
     "react-art": "~16.0.0",
     "react-bootstrap-table": "^4.0.6",
